Fix time medal and text alignment for CurrentTimeWidget

--- a/code/UI/Gameplay/CurrentTimeWidget.razor.scss
+++ b/code/UI/Gameplay/CurrentTimeWidget.razor.scss
@@ -1,3 +1,5 @@
+@import "../Menu/Shared/Table.scss";
+
 CurrentTimeWidget {
 	display: flex;
 	position: absolute;
@@ -13,27 +15,82 @@ CurrentTimeWidget {
 	padding: 2em;
 	pointer-events: none;
 
-	.title {
-		font-size: 88px;
-		//font-family: Poppins;
-		font-family: Consolas;
-		color: #fff;
-		text-shadow: 0px 0px 2px black;
-		text-align: left;
-		padding: 0 25px;
+	.container {
+		.table {
+			max-width: 525px;
+
+			.row {
+				align-items: center;
+				justify-content: flex-start;
+			}
+
+			.column {
+				align-items: center;
+				justify-content: flex-start;
+				margin: 0px 30px;
+			}
+
+			.column.medal {
+				width: 250px;
+				padding: 10px 0;
+
+				.medal-badge {
+					flex-direction: column;
+					align-content: center;
+					justify-content: center;
+					height: 125px;
+					margin: -30px -10px -10px 0px;
+
+					.onyx {
+						// No need for difference since middle is all the same.
+						// The guns give it the appearance of misalignment because
+						// the text is centered on the circle and not the whole image.
+						// This causes the guns to appear to stick out like bunny ears.
+						//margin: -10px;
+					}
+
+					img.medal {
+						width: 200px;
+						height: 200px;
+					}
+				}
+			}
+
+			.column.time {
+				flex-direction: row;
+
+				.title {
+					font-size: 70px;
+					//font-family: Poppins;
+					font-family: Consolas;
+					color: #fff;
+					text-shadow: 0px 0px 2px black;
+					text-align: left;
+					padding: 0px;
+				}
+			}
+
+			.row.timediff {
+				margin: -30px 0 0;
+
+				.column.medal {
+					height: 50px;
+				}
+
+				.time {
+					label {
+						margin-left: -40px;
+					}
+				}
+			}
+
+			.column.time {
+			}
+		}
 	}
 
 	.container {
 		align-items: center;
 		//margin: 50px;
-	}
-
-	.circle {
-		width: 100px;
-		height: 100px;
-		background-color: #353839; // Example color, you can change it
-		border-radius: 50%;
-		align-items: center;
-		justify-content: center;
 	}
 }
